k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-todo-app-svc
  namespace: production
  labels:
    app: devops-todo-app
spec:
  selector:
    app: devops-todo-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
